--- a/package.json
+++ b/package.json
@@ -6,24 +6,29 @@
   "repository": "https://github.com/Luciekimotho/recipe-mate.git",
   "author": "Lucie Kimotho",
   "license": "MIT",
-  "files": ["lib/**/*"],
-    "scripts": {
+  "files": [
+    "lib/**/*"
+  ],
+  "scripts": {
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest --config jestconfig.json"
   },
   "dependencies": {
     "@types/node": "^18.14.0",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/jest": "^29.4.0",
     "@typescript-eslint/eslint-plugin": "^5.53.0",
     "@typescript-eslint/parser": "^5.53.0",
     "eslint": "^8.34.0",
     "eslint-plugin-react": "^7.32.2",
+    "jest": "^29.4.3",
     "prettier": "^2.8.4",
     "react": "^17.0.2",
+    "ts-jest": "^29.0.5",
     "ts-node": "^10.9.1"
   }
 }
