--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "build": "tsc",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint . --ext .ts,.tsx",
-    "test": "jest --config jestconfig.json"
+    "test": "jest --config jestconfig.json",
+    "prepare" : "yarn run build",
+    "prepublishOnly" : "yarn test && yarn run lint"
   },
   "dependencies": {
     "@types/node": "^18.14.0",
